src/Domain/Compiler/Tests/Expression/BinaryExpression/VariableToImmediate/__Baselines__/VariableToImmediate_VariableSuperType-StashIr.error
error: Integral type 'u64 1' is not assignable to type 'u32'.
--> main.hs:8:12
  | 
8 | return 1 + x;}}
  |            ^
